Fix button spacing.

--- a/app/assets/stylesheets/external/vcwiz.scss
+++ b/app/assets/stylesheets/external/vcwiz.scss
@@ -1119,6 +1119,7 @@ mark.highlighter {
 
   .track-cell {
     text-align: center;
+    height: 40px;
 
     .button {
       width: 75%;
